fix horizontal scroll

--- a/dashboard_invest/dashboard/static/css/table.css
+++ b/dashboard_invest/dashboard/static/css/table.css
@@ -78,24 +78,34 @@ table.stocks_watch td {
   text-align: left;
 }
 
+/* sticky first col and header: https://css-tricks.com/a-table-with-both-a-sticky-header-and-a-sticky-first-column/ */
+/* make header sticky */
+
+
 /* make header sticky */
 .table-sticky thead th {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   box-shadow: inset 0 -1px 0 var(--bs-nav-active-color);
   background-color: var(--bs-nav-background-color);
 }
 
 /* make first column header  background: var(--bs-table-hover-color);
   opacity: 1;icky */
+.table-sticky thead th:first-child,
 .table-sticky tbody td:first-child {
   position: sticky;
   left: 0;
   z-index: 1;
   background-color: var(--bs-nav-background-color);
   /*box-shadow: inset -1px 0px 0 var(--bs-nav-active-color); # vertical border */
+}
+
+/* stack header #0 over other headers */
+.table-sticky thead th:first-child {
+  z-index: 3;
 }
 
 .table-sticky tbody tr:hover td {
